objects/wkitsm__ConfigurationItemClass__c.object
<CustomObject>
    <description>Configuration Item Class object</description>
    <fields>
        <fullName>wkitsm__ConfigurationItemClassFieldsJSON__c</fullName>
        <description>CI Class Fields to store fields related meta-data</description>
        <label>Configuration Item Class Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__Description__c</fullName>
        <description>This is the Description of the CI Class record</description>
        <inlineHelpText>Description of the CI Class record</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__TaniumCmdbId__c</fullName>
        <description>This field holds the External Id for a Configuration Item Class coming from the Tanium CMDB query</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the External Id for a Configuration Item Class coming from the Tanium CMDB query</inlineHelpText>
        <label>TaniumCmdbId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__TargetingCriteria__c</fullName>
        <description>Assignment criteria defined for Configuration Items</description>
        <inlineHelpText>Assignment criteria defined for Configuration Items</inlineHelpText>
        <label>Targeting Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Configuration Item Class</label>
    <listViews>
        <fullName>wkitsm__AllClasses</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__TargetingCriteria__c</columns>
        <columns>wkitsm__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Classes</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Item Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>